despawn players and handle when player joins while far away